# label_ci

./: CMakeLists.txt  README.md  common.sh
cmake/: LibsExtCommon.cmake
jenkins/client-android/scripts/: build.sh  calc_md5.sh  patch.sh
jenkins/client-ios/scripts/: build.sh  build_libs.sh  calc_md5.sh  deploy.sh  patch.sh  upload.sh
jenkins/client-linux/scripts/: calc_md5.sh  get_libs.sh  patch.sh  upload.sh
jenkins/client-macos/entitlements/: sign.plist
jenkins/client-macos/scripts/: app_store.sh  build.sh  calc_md5.sh  notarize.sh  patch.sh  upload.sh
jenkins/client-windows/scripts/: calc_md5.sh  patch.sh  upload.sh
jenkins/server/scripts/: build.sh  build_libs.sh  calc_md5.sh  patch.sh  upload.sh
libs_ext/: CMakeLists.txt
libs_ext/boost/: CMakeLists.txt
libs_ext/boost/cmake/: configure.cmake
libs_ext/cm256/: CMakeLists.txt
libs_ext/cm256/cmake/: CMakeLists.txt
libs_ext/dokany/: CMakeLists.txt
libs_ext/gettext/: CMakeLists.txt
libs_ext/gtest/: CMakeLists.txt
libs_ext/icu/: CMakeLists.txt
libs_ext/icu/cmake/: configure.cmake
libs_ext/libcurl/: CMakeLists.txt
libs_ext/libcurl/cmake/: configure.cmake
libs_ext/libcurlpp/: CMakeLists.txt
libs_ext/libflac/: CMakeLists.txt
libs_ext/libflac/cmake/: configure.cmake  patch.sh
libs_ext/libmongoclient/: CMakeLists.txt
libs_ext/libmongoclient/cmake/: configure.cmake
libs_ext/libogg/: CMakeLists.txt
libs_ext/libogg/cmake/: configure.cmake
libs_ext/libopenldap/: CMakeLists.txt
libs_ext/libopenldap/cmake/: configure.cmake
libs_ext/libopenldap/cmake/openldap_winpatch/: Makefile.win
libs_ext/libopenldap/cmake/openldap_winpatch/libraries/liblber/: lber.def  lber.mak  liblber.mak
libs_ext/libopenldap/cmake/openldap_winpatch/libraries/libldap/: ldap.def  ldap.mak  libldap.mak
libs_ext/libopenldap/cmake/openldap_winpatch/libraries/libldap_r/: ldap_r.mak  libldap_r.mak
libs_ext/libopenssl_1_0_x/: CMakeLists.txt
libs_ext/libopus/: CMakeLists.txt
libs_ext/libopus/cmake/: configure.cmake
libs_ext/libsndfile/: CMakeLists.txt
libs_ext/libsndfile/cmake/: configure.cmake  patch_linux.sh  patch_macos.sh
libs_ext/libspeex/: CMakeLists.txt
libs_ext/libspeex/cmake/: configure.cmake
libs_ext/libvorbis/: CMakeLists.txt
libs_ext/libvorbis/cmake/: configure.cmake  libogg.props
libs_ext/libvpx/: CMakeLists.txt
libs_ext/libvpx/cmake/: configure.cmake
libs_ext/libyuv/: CMakeLists.txt
libs_ext/libzlib/: CMakeLists.txt
libs_ext/libzlib/cmake/: configure.cmake
libs_ext/osxfuse/: CMakeLists.txt
libs_ext/osxfuse/cmake/: configure.cmake
libs_ext/protobuf/: CMakeLists.txt
libs_ext/protobuf/cmake/: configure.cmake
libs_ext/qt/: CMakeLists.txt
libs_ext/qt/cmake/: configure.cmake  icu_dependency.pri  zlib.h
libs_ext/qtifw/: CMakeLists.txt
libs_ext/qtwebkit/: CMakeLists.txt
libs_ext/qtwebkit/cmake/: WTF.pri  icu.pro  webkitgtk-1.10.x.patch
libs_ext/rtaudio/: CMakeLists.txt
libs_ext/rtaudio/cmake/: configure.cmake
libs_ext/soundtouch/: CMakeLists.txt
libs_ext/soundtouch/cmake/: configure.cmake
libs_ext/sqlcipher/: CMakeLists.txt
libs_ext/sqlcipher/cmake/: configure.cmake
libs_ext/websocketpp/: CMakeLists.txt
